# ChatbotWeb

./: Chatbot.py  Readme.txt  details.txt  pyproject.toml  questions.txt  requirements.txt  server.py
static/css/: main.css  style.css
static/js/: main.js
templates/: base.html  comm.html  exindex.html  forms.html  home.html  index.html  news.html  report.html  survey.html  vot.html
