[tool.poetry]
name = "repl_python3_ChatbotWeb"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gtts = "^2.1.1"
playsound = "^1.2.2"
sklearn = "^0.0"
flask = "^1.1.2"
werkzeug = "^1.0.1"
wtforms = "^2.3.3"
flask-bootstrap = "^3.3.7"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.4.4"
flask-wtf = "^0.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
